Introduce lobby and tournament components: add game invitation, registration, player list, tournament editing, and information views. Standardize game format constants.